# hnefatafl-egui

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  index.html
.cargo/: config.toml
res/assets/icons/: README.md
scripts/: serve.py
src/: ai.rs  app.rs  board.rs  game_play_view.rs  game_setup_view.rs  game_view.rs  info_pane.rs  lib.rs  main.rs  setup_view.rs
srv/: index.html
